# san

./: Cargo.toml
examples/: display_window.rs  planes.rs
src/: camera.rs  color.rs  geometry.rs  gpu.rs  instance.rs  lib.rs  material.rs  mesh.rs  params.rs  pipeline.rs  primitive.rs  renderer.rs  scene.rs  vertex.rs
src/material/: basic_material.rs
src/primitive/: color.rs
src/shaders/: basic_mesh.wgsl
tests/: test_scene.rs
