[package]
name = "san"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
wgpu = "0.15"
winit = "0.28"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
env_logger = "0.10"
