[package]
name = "san"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
log = "0.4"
once_cell = "1.17"
wgpu = "0.15"
winit = "0.28"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
env_logger = "0.10"
